tests/errors/semantics/typecheck_binary_expr/invalid_types_for_shr.c
// Invalid argument types to binary expression
void main()
{
	5.7 >> 1;
}
